--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-spinners": "^0.10.6",
     "react-svg": "^11.2.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
