--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "latest",
+    "@material-ui/lab": "latest",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
@@ -19,10 +22,7 @@
     "react-svg": "^11.2.3",
     "react-vertical-timeline-component": "^3.3.3",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4",
-    "@material-ui/lab": "latest",
-    "@material-ui/icons": "latest",
-    "@material-ui/core": "latest"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
